# rpc-gateway

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  debug.config.yml  dev.sh  docker-compose.yml  docker.config.toml  docker.config.yml  example.config.toml  example.config.yml  index.yaml  log_to_json.py  prometheus.yml  publish-docker.sh  todos.md
.cursor/rules/: rust.json
.github/workflows/: docker.yml
crates/loadtest/: Cargo.toml
crates/loadtest/src/: main.rs
crates/rpc-gateway-cache/: Cargo.toml
crates/rpc-gateway-cache/src/: cache.rs  lib.rs  local_cache.rs  redis.rs  reqres.rs  ttl.rs
crates/rpc-gateway-config/: Cargo.toml
crates/rpc-gateway-config/src/: cache_config.rs  canned_response_config.rs  chain_config.rs  config.rs  cors_config.rs  error_handling_config.rs  lib.rs  load_balancing_config.rs  logging_config.rs  metrics_config.rs  project_config.rs  request_coalescing_config.rs  server_config.rs  upstream_config.rs  upstream_health_checks_config.rs
crates/rpc-gateway-core/: Cargo.toml
crates/rpc-gateway-core/src/: app.rs  cache.rs  chain_handler.rs  cli.rs  config.rs  config_watcher.rs  cors.rs  gateway.rs  lazy_request.rs  lib.rs  load_balancer.rs  logging.rs  metrics.rs  request_pool.rs  server.rs  upstream.rs
crates/rpc-gateway-eth/: Cargo.toml
crates/rpc-gateway-eth/src/: lib.rs
crates/rpc-gateway-eth/src/eth/: mod.rs  serde_helpers.rs
crates/rpc-gateway-rpc/: Cargo.toml
crates/rpc-gateway-rpc/src/: lib.rs  response.rs
crates/rpc-gateway-upstream/: Cargo.toml
crates/rpc-gateway-upstream/src/: upstream.rs
helm/: index.yaml  rpc-gateway-0.1.0.tgz  rpc-gateway-0.2.0.tgz  rpc-gateway-0.3.0.tgz
helm/minikube-example/: Chart.yaml  values.yaml
helm/minikube-example/templates/: secrets.yaml
helm/rpc-gateway/: Chart.yaml  values.yaml
helm/rpc-gateway/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/rpc-gateway/templates/tests/: test-connection.yaml
rpc-gateway-config/: Cargo.toml
rpc-gateway-config/src/: lib.rs
rpc-gateway-core/: Cargo.toml
rpc-gateway-core/src/: cache.rs  chain_handler.rs  cli.rs  config.rs  gateway.rs  lib.rs  request_pool.rs
scripts/: flatten_rust.py  key_generator.py
src/: actix-old.rs  cache.rs  chain_handler.rs  gateway.rs  lib.rs  logging.rs  main.rs  old.rs  request_pool.rs
