[workspace]
members = ["crates/rpc-gateway-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Kerem Kazan <kerem.kazan@gmail.com>"]
# TODO: set exclude
exclude = []
homepage = "https://github.com/whats-good/rpc-gateway"
license = "MIT"
repository = "https://github.com/whats-good/rpc-gateway"

[workspace.lints.rust]
# TODO: add lint extensions

[workspace.dependencies]
arc-swap = "1.7.0"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
duration-str = "0.17.0"
moka = { version = "0.12.10", features = ["future"] }
nonempty = "0.11.0"
rand = "0.9.0"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = { version = "2.0.12", features = ["std"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-actix-web = "0.7.18"
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
actix-web = "4.4"
alloy-chains = "0.2.0"
anvil-core = { git = "https://github.com/whats-good/foundry", package = "anvil-core", rev = "b2bdf5ee58387021fe2048d47ea696bffaf44ffd" }
anvil-rpc = { git = "https://github.com/whats-good/foundry", package = "anvil-rpc", rev = "b2bdf5ee58387021fe2048d47ea696bffaf44ffd" }
anvil-server = { git = "https://github.com/whats-good/foundry", package = "anvil-server", rev = "b2bdf5ee58387021fe2048d47ea696bffaf44ffd" }
alloy-primitives = "1.0.0"
alloy-dyn-abi = "0.8.25"
alloy-eips = "0.12.6"

[profile.dev]
debug = true
split-debuginfo = "packed"
