[workspace]
members = [
  "crates/loadtest",
  "crates/rpc-gateway-cache",
  "crates/rpc-gateway-config",
  "crates/rpc-gateway-core",
  "crates/rpc-gateway-eth",
  "crates/rpc-gateway-rpc",
  "crates/rpc-gateway-upstream",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Kerem Kazan <kerem.kazan@gmail.com>"]
# TODO: set exclude
exclude = []
homepage = "https://github.com/whats-good/rpc-gateway"
license = "MIT"
repository = "https://github.com/whats-good/rpc-gateway"

[workspace.lints.rust]
# TODO: add lint extensions

[workspace.dependencies]
arc-swap = "1.7.0"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
duration-str = "0.17.0"
nonempty = "0.11.0"
rand = "0.9.1"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_bytes = "0.11.7"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
tracing = "0.1"
tracing-appender = { version = "0.2.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"

alloy-chains = "0.2.0"
alloy-primitives = { version = "1.1.0", features = ["serde"] }
alloy-eips = "0.15.8"
alloy-rpc-types = "0.15.8"
alloy-serde = "0.15.8"

rpc-gateway-config = { path = "crates/rpc-gateway-config" }
rpc-gateway-cache = { path = "crates/rpc-gateway-cache" }
rpc-gateway-eth = { path = "crates/rpc-gateway-eth" }
rpc-gateway-rpc = { path = "crates/rpc-gateway-rpc" }
rpc-gateway-upstream = { path = "crates/rpc-gateway-upstream" }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"

[profile.dev]
debug = true
split-debuginfo = "packed"
opt-level = 0
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256
