[package]
name = "loadtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
goose = "0.18.0"
tokio.workspace = true
alloy-primitives.workspace = true
serde_json = "1.0"

[lints]
workspace = true
