[package]
name = "rpc-gateway-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-chains.workspace = true
alloy-dyn-abi.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
anvil-core = { git = "https://github.com/whats-good/foundry", package = "anvil-core", rev = "b2bdf5ee58387021fe2048d47ea696bffaf44ffd" }
anvil-rpc = { git = "https://github.com/whats-good/foundry", package = "anvil-rpc", rev = "b2bdf5ee58387021fe2048d47ea696bffaf44ffd" }
arc-swap.workspace = true
futures.workspace = true
metrics.workspace = true
moka.workspace = true
rand.workspace = true
redis = { version = "0.30.0", features = ["tokio-comp", "cluster-async"] }
bb8 = { version = "0.9.0" }
bb8-redis = "0.22.0"
rpc-gateway-config.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
