[package]
name = "rpc-gateway-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-eips.workspace = true
arc-swap.workspace = true
redis = { version = "0.30.0", features = ["tokio-comp", "cluster-async"] }
bb8 = { version = "0.9.0" }
bb8-redis = "0.22.0"
moka = { version = "0.12.10", features = ["future"] }
bytes.workspace = true
rpc-gateway-config.workspace = true
rpc-gateway-eth.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
