[package]
name = "rpc-gateway-core"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4"
alloy-chains.workspace = true
alloy-dyn-abi.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
anvil-core = { git = "https://github.com/whats-good/foundry", package = "anvil-core", rev = "b2bdf5ee58387021fe2048d47ea696bffaf44ffd" }
anvil-rpc = { git = "https://github.com/whats-good/foundry", package = "anvil-rpc", rev = "b2bdf5ee58387021fe2048d47ea696bffaf44ffd" }
anvil-server = { git = "https://github.com/whats-good/foundry", package = "anvil-server", rev = "b2bdf5ee58387021fe2048d47ea696bffaf44ffd" }
arc-swap.workspace = true
async-trait = "0.1.88"
awc = "3.6.0"
clap.workspace = true
dashmap = "6.1.0"
duration-str.workspace = true
futures.workspace = true
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
moka.workspace = true
nonempty.workspace = true
# quanta = "0.12.5" TODO: add this back
rand.workspace = true
redis = { version = "0.29.5", features = ["tokio-comp", "cluster-async"] }
reqwest.workspace = true
rpc-gateway-config.workspace = true
serde_json.workspace = true
simd-json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
tokio-util = { version = "0.7.14", features = ["rt"] }
tokio.workspace = true
tracing-actix-web = "0.7.18"
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true


[[bin]]
name = "rpc-gateway"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[profile.dev]
debug = true
split-debuginfo = "packed"
opt-level = 0
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256
