[package]
name = "rpc-gateway-core"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4"
arc-swap.workspace = true
clap.workspace = true
dashmap = "6.1.0"
futures.workspace = true
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
nonempty.workspace = true
rpc-gateway-config.workspace = true
rpc-gateway-cache.workspace = true
rpc-gateway-eth.workspace = true
rpc-gateway-rpc.workspace = true
rpc-gateway-upstream.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
bytes.workspace = true
tikv-jemallocator = { version = "0.6.0", features = [
  "unprefixed_malloc_on_supported_platforms",
] }

[[bin]]
name = "rpc-gateway"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"
