[package]
name = "rpc-gateway-eth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rpc-types = { workspace = true }
alloy-serde.workspace = true
serde.workspace = true
serde_json = { workspace = true }

[lints]
workspace = true
