[package]
name = "rpc-gateway-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
bytes.workspace = true
